# nexus-hybrid-rag-interviewer

./: .gitignore  README.md
backend/: .env.example  ARCHITECTURE.md  README.md  mypy.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: evaluator_agent.py  rag_agent.py  sql_agent.py
backend/app/api/: auth.py  chat.py  health.py  ingest.py
backend/app/core/: caching.py  config.py  gemini_client.py  logging.py  security.py
backend/app/db/: models.py  seed.py  session.py
backend/app/db/migrations/: README.md
backend/app/db/repositories/: chat_repository.py  domain_repository.py  face_repository.py
backend/app/orchestration/: hybrid_orchestrator.py
backend/app/schemas/: auth.py  chat.py  health.py  ingest.py
backend/app/services/: face_auth_service.py  prompt_builder.py  query_router.py  response_cache.py  retrieval_service.py  vector_service.py
backend/app/vector/: chunking.py  indexer.py  retriever.py
backend/data/chroma_db/: chroma.sqlite3
backend/scripts/: diagnose_gemini.py  ingest_knowledge.py  init_db.py  list_gemini_models.py  test_v1_5.py  verify_face_security.py  verify_production.py
backend/tests/: test_chat_smoke.py  test_face_auth.py  test_latency_budget.py  test_query_router.py
docs/: architecture.md  decision-log.md  project-structure.md  setup.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx  SourceCitations.tsx  WebcamCapture.tsx  WebcamVerifier.tsx
infra/: docker-compose.yml
(+5 files in other folders)
